Year 3/Compiler Construction/[Practice]/q1.output
Grammar

    0 $accept: S $end

    1 S: L EQ R
    2  | R

    3 L: STAR R
    4  | ID

    5 R: L


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    EQ (258) 1
    ID (259) 4
    STAR (260) 3


Nonterminals, with rules where they appear

    $accept (6)
        on left: 0
    S (7)
        on left: 1 2
        on right: 0
    L (8)
        on left: 3 4
        on right: 1 5
    R (9)
        on left: 5
        on right: 1 2 3


State 0

    0 $accept: • S $end

    ID    shift, and go to state 1
    STAR  shift, and go to state 2

    S  go to state 3
    L  go to state 4
    R  go to state 5


State 1

    4 L: ID •

    $default  reduce using rule 4 (L)


State 2

    3 L: STAR • R

    ID    shift, and go to state 1
    STAR  shift, and go to state 2

    L  go to state 6
    R  go to state 7


State 3

    0 $accept: S • $end

    $end  shift, and go to state 8


State 4

    1 S: L • EQ R
    5 R: L •

    EQ  shift, and go to state 9

    $default  reduce using rule 5 (R)


State 5

    2 S: R •

    $default  reduce using rule 2 (S)


State 6

    5 R: L •

    $default  reduce using rule 5 (R)


State 7

    3 L: STAR R •

    $default  reduce using rule 3 (L)


State 8

    0 $accept: S $end •

    $default  accept


State 9

    1 S: L EQ • R

    ID    shift, and go to state 1
    STAR  shift, and go to state 2

    L  go to state 6
    R  go to state 10


State 10

    1 S: L EQ R •

    $default  reduce using rule 1 (S)
